--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -108,6 +108,8 @@
         <!-- apacheds-server-integ is used for LdapIdentityProviderTest but not currently in our repository -->
         <!--<dependency org="org.apache.directory.server" name="apacheds-server-integ" rev="1.5.5" force="true" conf="test"/>-->
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="test"/>
+        <dependency org="org.scala-lang" name="scala-library" rev="2.9.1" force="true" conf="test"/>
+        <dependency org="org.specs2" name="specs2_2.9.1" rev="1.5" force="true" conf="test"/>
        
         <!-- Exclusions --> 
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
