Console applet bulid now declares pack200 task.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29220 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console-applet/build.xml
+++ b/modules/gateway/console-applet/build.xml
@@ -35,6 +35,10 @@
         <property name="jar.file.nopack" value="${jar.file}.nopack.jar"/>
         <move file="${jar.file}" tofile="${jar.file.nopack}"/>
 
+        <taskdef name="pack200"
+                 classname="org.jdesktop.deployment.ant.pack200.Pack200Task"
+                 classpath="../../../lib/tools/deployment-ant-pack200-1.0beta.jar"/>
+
         <pack200 src="${jar.file.nopack}"
                  destfile="${jar.file}"
                  segmentlimit="-1"
