SSM-3415: Fix for Typo in Edit Internal Identity Provider dialog
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29225 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -22,6 +22,7 @@ whether LDAP users can be added to a role in the "Manage Roles" task.</p>\
 
 #######
 # components
+providerNameTextField.plain-label=Provider Name:
 providerNameTextField.label=Provider &Name:*
 providerNameTextField.mnemonic=I
 providerNameTextField.tooltip=Enter provider's name
