SSG-5001: Fixed by validating Subject DN, when OK button is pressed in Sign Certificate Properties dialog.  If the input value for Subject DN is invalid, an error dialog pops with a message, "Invalid Subject DN: improperly specified input name: <invalid input>".  After the error dialog disposes, the Signing Certificate Properties dialog is still there and user can change the invalid input.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29233 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
@@ -14,3 +14,5 @@ button.label.cancel=&Cancel
 button.label.close=&Close
 
 text.cert.expiry.age=Certificate Expiry Age
+
+error.message.invalid.subject.dn=Invalid Subject DN: {0}
