SSM-1330: Add min/max validation for "audit.search.maxMessageSize" and min (0) for "audit.messageSizeLimit" configuration properties.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29273 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1576,11 +1576,14 @@ audit.search.maxMessageSize.clusterProperty=audit.search.maxMessageSize
 audit.search.maxMessageSize.default=2621440
 audit.search.maxMessageSize.visible=false
 audit.search.maxMessageSize.validation.type=long
+audit.search.maxMessageSize.validation.min=1024
+audit.search.maxMessageSize.validation.max=20971520
 
 audit.messageSizeLimit.description=The maximum audit message in bytes the gateway will record or 0 for no limit
 audit.messageSizeLimit.default=10485760
 audit.messageSizeLimit.clusterProperty=audit.messageSizeLimit
 audit.messageSizeLimit.validation.type=long
+audit.messageSizeLimit.validation.min=0
 
 httpDigest.enable.description=Enable storage of digest password compatible with HTTP Digest
 httpDigest.enable.clusterProperty=httpDigest.enable
