g FR-239: Added cluster property for max amount of uids generated. Enforced max amount.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29283 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1613,3 +1613,7 @@ db.replicationErrorAuditInterval.validation.type = timeUnit
 gateway.3scale.reportingServer.description = The 3 scale reporting server
 gateway.3scale.reportingServer.default = http://su1.3scale.net
 gateway.3scale.reportingServer.clusterProperty = gateway.3scale.reportingServer
+
+uuid.amount.max.description = The maximum allowable amount of UUIDs that a Generate UUID assertion can create.
+uuid.amount.max.default = 100
+uuid.amount.max.clusterProperty = uuid.amount.max
