SSM-3469: Fix for Cluster property validation: Percentage threshold may be set greater than 100
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29285 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -351,16 +351,22 @@ auditArchiverShutdownThreshold.description = The AuditArchiver will put the SSG 
 auditArchiverShutdownThreshold.default = 90
 auditArchiverShutdownThreshold.clusterProperty = audit.archiverShutdownThreshold
 auditArchiverShutdownThreshold.validation.type = integer
+auditArchiverShutdownThreshold.validation.min = 0
+auditArchiverShutdownThreshold.validation.max = 100
 
 auditArchiverStartThreshold.description = Archiving of audit records will start when database disk usage (percentage) is above this threshold.
 auditArchiverStartThreshold.default = 75
 auditArchiverStartThreshold.clusterProperty = audit.archiverStartThreshold
 auditArchiverStartThreshold.validation.type = integer
+auditArchiverStartThreshold.validation.min = 0
+auditArchiverStartThreshold.validation.max = 100
 
 auditArchiverStopThreshold.description = Archiving of audit records will stop when database disk usage (percentage) drops below this threshold.
 auditArchiverStopThreshold.default = 50
 auditArchiverStopThreshold.clusterProperty = audit.archiverStopThreshold
 auditArchiverStopThreshold.validation.type = integer
+auditArchiverStopThreshold.validation.min = 0
+auditArchiverStopThreshold.validation.max = 100
 
 auditArchiverFtpConfig.description = The serialized form of the FTP configuration where the archiver backs up the audit logs; not exposed in UI.
 auditArchiverFtpConfig.default =
