Simple LDAP progress.  Fixed hotkey conflicts in LDAP properties dialog.  Fixed extra backslashes in Simple LDAP wiz panel description.  Bind-only LDAP classes now use the LDAP classloader.  Simple LDAP provider user DNs are no longer expanded at policy design time -- all enforcement is done by login name, and the DN is expanded only when authentication is done.  (It will continue to be available after authentication, in case it is useful to run additional attribute queries or whatnot).   The Simple LDAP provider will decline to perform DN expansion if the username does not match the regular expression in the "ldap.simple.username.pattern" cluster property.  You can now have an empty bind prefix and/or suffix.  If both are empty, and ldap.simple.username.pattern is relaxed to something non-restrictive like  .*, it simply means to use the entire DN as the usernames.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29287 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -192,6 +192,10 @@ ldapReadTimeout.default = 30s
 ldapReadTimeout.clusterProperty = ldap.read.timeout
 ldapReadTimeout.validation.type = timeUnit
 
+ldapSimpleUsernamePattern.description = Regular expression that any username must match when being combined into a DN using the Simple LDAP provider.
+ldapSimpleUsernamePattern.default = ^[\\p{Alnum}\\.\\-\\_]+$
+ldapSimpleUsernamePattern.clusterProperty = ldap.simple.username.pattern
+
 # serverconfig name must be same as cluster property name for this property
 trace.policy.guid.description = GUID of internal policy to invoke after each assertion finished, when debug tracing is enabled for a published service (default=empty)
 trace.policy.guid.default =
