--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -34,16 +34,16 @@ providerTypeTextField.mnemonic=T
 providerTypeTextField.tooltip=Select provider type
 
 # ldap
-ldapHostTextField.label= LDAP Host &URL:*
+ldapHostTextField.label= LDAP &Host URL:*
 ldapHostTextField.tooltip=Enter LDAP host URL (ldap://host:port)
 
 ldapSearchBaseTextField.label= Search &Base:*
 ldapSearchBaseTextField.tooltip= Search base DN (ou=People,o=acme.com)
 
-ldapBindDNTextField.label=Bind &DN:
+ldapBindDNTextField.label=B&ind DN:
 ldapBindDNTextField.tooltip=Enter LDAP binding DN (cn=Manager)
 
-ldapBindPassTextField.label=Bind Password:
+ldapBindPassTextField.label=Bind &Password:
 ldapBindPassTextField.tooltip=Enter LDAP binding password (secret)
 
 ldapAdminEnabledCheckbox.text = &Allow assignment to administrative &roles
@@ -157,5 +157,5 @@ downButton.label=Move &Down
 addButton.label=&Add
 editButton.label=&Edit
 removeButton.label=Re&move
-showPasswordButton.label=Show Password
+showPasswordButton.label=Sho&w Password
 
