SSM-3475:  Fix for Cluster property logon.inactivityPeriod has no any value content verification
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29289 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1291,7 +1291,7 @@ logon.sessionExpiry.validation.type = integer
 logon.inactivityPeriod.description=The time interval an administrative user account could be inactive for.  Default is 35 days  Value should be entered in days.
 logon.inactivityPeriod.default=35
 logon.inactivityPeriod.clusterProperty=logon.inactivityPeriod
-logon.inactivityPeriody.validation.type = integer
+logon.inactivityPeriod.validation.type = integer
 
 #Property is deprecated, leaving in for backwards compatibility
 security.stig.enabled.default=true
