Simple LDAP home stretch.   Non-listable ID providers can now be tested if a sample username+password is provided.  Test button is now functional in Simple LDAP properties.  Added other GUI validation.  Client certs can no longer be assigned for Simple LDAP template users.  RunOnChangeListener now implements PropertyChangeListener.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29295 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -99,6 +99,8 @@ provider.save.error=<html>An system error was encountered while saving the provi
 test.error.runtime=Error testing the LDAP connector
 test.res.ok=The configuration of this Identity Provider is valid.
 test.res.title=Identity Provider Configuration Test
+test.password.title=Test Credentials Required
+test.password.prompt=Please enter a username and password for testing the provider.
 
 add.error.title=Error
 add.entry.required=Press the Add button to create an empty entry first\n before entering the data.\n
