g FR-239: Added cluster property validation. Changed feature set to fromClass and added to policyAccel feature set. Injected Config instead of calling static method.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29296 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1627,3 +1627,5 @@ gateway.3scale.reportingServer.clusterProperty = gateway.3scale.reportingServer
 uuid.amount.max.description = The maximum allowable amount of UUIDs that a Generate UUID assertion can create.
 uuid.amount.max.default = 100
 uuid.amount.max.clusterProperty = uuid.amount.max
+uuid.amount.max.validation.type = integer
+uuid.amount.max.validation.min = 1
