include SshAssertion in the production build.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29298 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -66,6 +66,7 @@
         <dependency name="JsonTransformationAssertion" rev="latest.integration" conf="module"/>
         <dependency name="IcapAntivirusScannerAssertion" rev="latest.integration" conf="module"/>
         <dependency name="UUIDGeneratorAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="SshAssertion" rev="latest.integration" conf="module"/>
 
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
