--- a/modules/common/ivy.xml
+++ b/modules/common/ivy.xml
@@ -5,26 +5,16 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-common" type="jar" ext="jar" conf="master"/>
         <artifact name="layer7-common-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core;test"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
         <dependency org="apache-harmony" name="apache-harmony-asn1" rev="0.1" force="true" conf="core"/>
         <dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>
         <dependency org="commons-collections" name="commons-collections" rev="3.2.1" force="true" conf="core"/>
@@ -40,6 +30,5 @@
         <dependency org="xerces" name="xercesImpl" rev="2.11.0" force="true" conf="core"/>
         <dependency org="com.ibm" name="xss4j.00.patch" rev="1.0" force="true" conf="core"/>
         <dependency org="com.ibm" name="xss4j" rev="1.0" force="true" conf="core"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
