--- a/modules/ems/ivy.xml
+++ b/modules/ems/ivy.xml
@@ -5,29 +5,19 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-ems" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
-        <dependency name="layer7-gateway-management" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
-        <dependency name="layer7-gateway-server" rev="latest.integration" force="true" conf="core->default; test->default,test"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core->default; test->default,test"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core->default; test->default,test"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="core->default; test->default,test"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" conf="core->default; test->default,test"/>
+        <dependency name="layer7-gateway-management" rev="latest.integration" conf="core->default; test->default,test"/>
+        <dependency name="layer7-gateway-server" rev="latest.integration" conf="core->default; test->default,test"/>
 
         <dependency org="bouncycastle" name="bcpg-jdk16" rev="1.46" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1" force="true" conf="core"/>
@@ -49,7 +39,6 @@
         <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-sslengine" rev="6.1.26" force="true" conf="core"/>
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="test"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
         <dependency org="mysql" name="mysql-connector-java" rev="5.1.15" force="true" conf="core"/>
         <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxws" rev="2.3.3" force="true" conf="core"/>
         <dependency org="org.apache.cxf" name="cxf-rt-transports-http" rev="2.3.3" force="true" conf="core"/>
