--- a/modules/gateway/api/ivy.xml
+++ b/modules/gateway/api/ivy.xml
@@ -31,6 +31,6 @@
         <artifact name="layer7-api" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
     </dependencies>
 </ivy-module>
