--- a/modules/gateway/assertions/Saml2AttributeQueryAssertion/ivy.xml
+++ b/modules/gateway/assertions/Saml2AttributeQueryAssertion/ivy.xml
@@ -5,16 +5,9 @@
         status="integration"
 	>
 	</info>
-	<configurations defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf" extends="runtime,master"/>
-        <conf name="master" description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only." extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
-        <conf name="client" description="Client assertion"/>
-	</configurations>
+	<configurations>
+        <include file="../assertion-ivyconfiguration.xml"/>
+	</configurations>	
 	<publications>
 		<artifact name="Saml2AttributeQueryAssertion" type="aar" ext="aar" conf="master"/>
 	</publications>
@@ -22,7 +15,7 @@
         <dependency org="com.l7tech.lib" name="samlp_v1_jaxb" rev="1.0" force="true" conf="core"/>
         <dependency org="com.l7tech.lib" name="samlp_v2_jaxb" rev="1.0" force="true" conf="core"/>
 
-        <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
+        <dependency name="layer7-modular-assertions" rev="latest.integration"
                     conf="compile->compile;runtime->runtime;test->test"/>
     </dependencies>
 </ivy-module>
