--- a/modules/gateway/assertions/SamlIssuerAssertion/ivy.xml
+++ b/modules/gateway/assertions/SamlIssuerAssertion/ivy.xml
@@ -6,22 +6,13 @@
             >
     </info>
     <configurations>
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
-        <conf name="client" description="Client assertion"/>
-    </configurations>
+        <include file="../assertion-ivyconfiguration.xml"/>
+    </configurations>	
     <publications>
         <artifact name="SamlIssuerAssertion" type="aar" ext="aar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-modular-assertions" rev="latest.integration" force="true" conf="compile,runtime,test"/>
+        <dependency name="layer7-modular-assertions" rev="latest.integration"
+                    conf="compile->compile;runtime->runtime;test->test"/>
     </dependencies>
 </ivy-module>
