--- a/modules/gateway/common/ivy.xml
+++ b/modules/gateway/common/ivy.xml
@@ -5,30 +5,20 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-gateway-common" type="jar" ext="jar" conf="master"/>
         <artifact name="layer7-gateway-common-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-identity" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-uddi" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core; test"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-identity" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-uddi" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
         <dependency org="aopalliance" name="aopalliance" rev="1.0" force="true" conf="core"/>
         <dependency org="com.jscape" name="sftp" rev="8.8.0" force="true" conf="core"/>
         <dependency org="javax.validation" name="validation-api" rev="1.0.0.GA" force="true" conf="core"/>
@@ -42,6 +32,5 @@
 
         <!-- RSA needed for running tests (since alternatives jarfiles are not deployed) -->
         <dependency org="com.rsa" name="jsafe-jce" rev="4.1.0.1" force="true" conf="test"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
