--- a/modules/gateway/patchverifier/ivy.xml
+++ b/modules/gateway/patchverifier/ivy.xml
@@ -5,34 +5,24 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="core->runtime">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-gateway-patchverifier" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-identity" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-uddi" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-wsdl" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-config" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-management" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-server" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-processcontroller" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-identity" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-uddi" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-wsdl" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-config" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-management" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-server" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-processcontroller" rev="latest.integration" conf="core"/>
 
         <dependency org="commons-lang" name="commons-lang" rev="2.6" force="true" conf="core"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.4" force="true" conf="core"/>
