--- a/modules/gateway/processcontroller/ivy.xml
+++ b/modules/gateway/processcontroller/ivy.xml
@@ -4,29 +4,20 @@
           module="layer7-gateway-processcontroller"
           status="integration">
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-gateway-processcontroller" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-config" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-management" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-server" rev="latest.integration" force="true" conf="core->master"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-config" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-management" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-server" rev="latest.integration" conf="core->master"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
 
         <dependency org="com.l7tech.lib" name="apache-cxf-lib" rev="2.3.3" force="true" conf="core"/>
         <dependency org="com.sun.xml.fastinfoset" name="FastInfoset" rev="1.2.7" force="true" conf="core"/>
@@ -49,7 +40,6 @@
         <dependency org="org.hibernate" name="hibernate-core" rev="3.6.1.Final" force="true" conf="compile->master"/>
 
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="test"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
 
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
