--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -6,11 +6,8 @@
           e:title="Gateway"
             >
     </info>
-    <!--
-      By default map all configurations to themselves, if existing
-    -->
     <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default; alternative->default">
+            defaultconfmapping="compile->default; core->default; runtime->default; test->[org=com.l7tech]test,default; optional->default; alternative->default">
         <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
         <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
               extends="runtime,master"/>
@@ -29,16 +26,16 @@
     </publications>
     <dependencies>
         <!-- Module dependencies -->
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core->default,optional; test->default,test,optional"/>
-        <dependency name="layer7-uddi" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-proxy" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-wsdl" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-management" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-reporting" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-sca-common" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" conf="core->default,optional; test->default,test,optional"/>
+        <dependency name="layer7-uddi" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-proxy" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-wsdl" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-management" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-reporting" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-sca-common" rev="latest.integration" conf="core"/>
 
         <!-- Dependencies -->
         <dependency org="com.l7tech.lib" name="layer7-sun-jaxws" rev="1.0" conf="core"/> <!-- should be before CXF in classpath -->
@@ -103,13 +100,10 @@
         <dependency org="com.rsa" name="sslj" rev="5.1.1" force="true" conf="test,alternative"/>
 
         <!-- Test dependencies -->
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
         <dependency org="org.apache.cxf" name="cxf-rt-transports-local" rev="2.3.3" force="true" conf="test"/>
         <!-- apacheds-server-integ is used for LdapIdentityProviderTest but not currently in our repository -->
         <!--<dependency org="org.apache.directory.server" name="apacheds-server-integ" rev="1.5.5" force="true" conf="test"/>-->
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="test"/>
-        <dependency org="org.scala-lang" name="scala-library" rev="2.9.1" force="true" conf="test"/>
-        <dependency org="org.specs2" name="specs2_2.9.1" rev="1.5" force="true" conf="test"/>
        
         <!-- Exclusions --> 
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
