--- a/modules/json/ivy.xml
+++ b/modules/json/ivy.xml
@@ -5,20 +5,14 @@
           status="integration"
     >
     </info>
-    <configurations defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf" extends="runtime,master"/>
-        <conf name="master" description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only." extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-json" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
         <dependency org="json-schema-validator" name="json-schema-validator" rev="0.0.1-SNAPSHOT" force="true" conf="core"/>
         <dependency org="org.codehaus.jackson" name="jackson-core-asl" rev="1.7.1" force="true" conf="core"/>
         <dependency org="org.codehaus.jackson" name="jackson-mapper-asl" rev="1.7.1" force="true" conf="core"/>
@@ -27,7 +21,6 @@
 
         <!-- Test dependencies -->
         <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
         
         <conflict org="org.slf4j" module="slf4j-api" rev="1.6.1"/>
     </dependencies>
