--- a/modules/policy/ivy.xml
+++ b/modules/policy/ivy.xml
@@ -5,29 +5,19 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-policy" type="jar" ext="jar" conf="master"/>
         <artifact name="layer7-policy-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-api" rev="latest.integration" force="true" conf="compile->master-unsigned"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-kerberos" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-wsdl" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-json" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-api" rev="latest.integration" conf="compile->master-unsigned"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-kerberos" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-wsdl" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-json" rev="latest.integration" conf="core"/>
         <dependency org="org.apache.santuario" name="xmlsec" rev="1.4.4" force="true" conf="core"/>
         <!-- Needed when tarari is used -->
         <dependency org="antlr" name="antlr" rev="2.7.7-l7p1" conf="optional,test"/>
@@ -54,7 +44,6 @@
         <dependency org="com.l7tech.lib" name="xbean-xenc-xmldsig" rev="1.0" force="true" conf="core"/>
         <dependency org="com.ibm" name="xss4j.00.patch" rev="1.0" force="true" conf="core"/>
         <dependency org="com.ibm" name="xss4j" rev="1.0" force="true" conf="core"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
         <!-- Optional security provider -->
         <dependency org="com.chrysalisits.cryptox" name="luna-libs" rev="1" force="true" conf="optional"/>
         <!-- Optional security provider -->
