--- a/modules/skunkworks/ivy.xml
+++ b/modules/skunkworks/ivy.xml
@@ -5,35 +5,25 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-skunkworks" type="jar" ext="jar" conf="master"/>
         <artifact name="layer7-skunkworks-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core->default,test"/>
-        <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-server" rev="latest.integration" force="true" conf="core->default,test"/>
-        <dependency name="layer7-gateway-console" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gateway-config" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-proxy" rev="latest.integration" force="true" conf="core->default,test"/>
-        <dependency name="layer7-xmlvpnclient" rev="latest.integration" force="true" conf="core->default,test"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core->default,test"/>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-ems" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core->default,test"/>
+        <dependency name="layer7-gui" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-server" rev="latest.integration" conf="core->default,test"/>
+        <dependency name="layer7-gateway-console" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gateway-config" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-proxy" rev="latest.integration" conf="core->default,test"/>
+        <dependency name="layer7-xmlvpnclient" rev="latest.integration" conf="core->default,test"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="core->default,test"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-ems" rev="latest.integration" conf="core"/>
         <dependency org="antlr" name="antlr" rev="2.7.7-l7p1" force="true" conf="optional->compile(*),master(*)"/>
         <dependency org="com.ibm.mq" name="mq6" rev="6.0.2.2" force="true" conf="optional->compile(*),master(*)"/>
         <dependency org="com.sun.japex" name="japex" rev="1.1" force="true" conf="core"/>
@@ -45,7 +35,6 @@
         <dependency org="com.tarari" name="tarari-raxj" rev="4.4.3.31" force="true"
                     conf="optional->compile(*),master(*)"/>
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="core"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="core"/>
         <dependency org="jasperreports" name="jasperreports" rev="3.1.2-p1" force="true" conf="core"/>
         <dependency org="mysql" name="mysql-connector-java" rev="5.1.15" force="true" conf="core"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.4" force="true" conf="core"/>
