--- a/modules/test/ivy.xml
+++ b/modules/test/ivy.xml
@@ -5,23 +5,15 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-test" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="core"/>
+        <dependency org="org.scala-lang" name="scala-library" rev="2.9.1" force="true" conf="core"/>
+        <dependency org="org.specs2" name="specs2_2.9.1" rev="1.5" force="true" conf="core"/>
     </dependencies>
 </ivy-module>
