--- a/modules/uddi/ivy.xml
+++ b/modules/uddi/ivy.xml
@@ -5,26 +5,16 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-uddi" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-wsdl" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-wsdl" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
         <dependency org="com.l7tech.lib" name="layer7-uddi-lib" rev="1.1.0" force="true" conf="core"/>
         <dependency org="javax.xml.soap" name="saaj-api" rev="1.3.1" force="true" conf="core"/>
         <dependency org="com.sun.xml.messaging.saaj" name="saaj-impl" rev="1.3.3" force="true" conf="core"/>
@@ -33,6 +23,5 @@
                      matcher="exact"/>
         </dependency>
         <dependency org="wsdl4j" name="wsdl4j" rev="1.6.2-l7p3" force="true" conf="core"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
