--- a/modules/wsdl/ivy.xml
+++ b/modules/wsdl/ivy.xml
@@ -5,22 +5,15 @@
 		status="integration"
 	>
 	</info>
-	<configurations defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf" extends="runtime,master"/>
-        <conf name="master" description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only." extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+	<configurations>
+		<include file="../../etc/build/ivyconfigurations.xml"/>
 	</configurations>
 	<publications>
 		<artifact name="layer7-wsdl" type="jar" ext="jar" conf="master"/>
 	</publications>
 	<dependencies>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
+		<dependency name="layer7-common" rev="latest.integration" conf="core; test->default,test"/>
 		<dependency org="org.apache.ws.commons.policy" name="policy" rev="1.0" force="true" conf="core"/>
 		<dependency org="wsdl4j" name="wsdl4j" rev="1.6.2-l7p3" force="true" conf="core"/>
-		<dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
 	</dependencies>
 </ivy-module>
