--- a/modules/xmlvpnclient/ivy.xml
+++ b/modules/xmlvpnclient/ivy.xml
@@ -5,30 +5,20 @@
           status="integration"
             >
     </info>
-    <configurations
-            defaultconfmapping="compile->default; core->default; runtime->default; test->default; optional->default">
-        <conf name="core" description="Core dependencies for all configurations" visibility="private"/>
-        <conf name="default" description="Runtime dependencies and master artifact can be used with this conf"
-              extends="runtime,master"/>
-        <conf name="master"
-              description="Contains only the artifact published by this module itself, with no transitive dependencies"/>
-        <conf name="compile" description="The dependency is required at compile time." extends="core,optional"/>
-        <conf name="runtime" description="The dependency is required at runtime." extends="core"/>
-        <conf name="test" description="The dependency required for building/running tests only."
-              extends="runtime,compile"/>
-        <conf name="optional" description="Contains all optional dependencies"/>
+    <configurations>
+        <include file="../../etc/build/ivyconfigurations.xml"/>
     </configurations>
     <publications>
         <artifact name="layer7-xmlvpnclient" type="jar" ext="jar" conf="master"/>
         <artifact name="layer7-xmlvpnclient-test" type="jar" ext="jar" conf="test"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core; test->default,test"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-proxy" rev="latest.integration" force="true" conf="core; test->default,test"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-utility" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-gui" rev="latest.integration" conf="core; test->default,test"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-proxy" rev="latest.integration" conf="core; test->default,test"/>
         <dependency org="com.incors.plaf" name="kunststoff" rev="2.0.2" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" force="true" conf="core"/>
@@ -37,7 +27,6 @@
         <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.6.1" force="true" conf="core"/>
         <dependency org="org.slf4j" name="log4j-over-slf4j" rev="1.6.1" force="true" conf="core"/>
         <dependency org="snoozesoft" name="systray4j" rev="2.3.2" force="true" conf="core"/>
-        <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
         <!-- For the XVC and Bridge API, we'll always use the FIPS version of RSA for the time being -->
         <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.1" force="true" conf="core"/>
         <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="core"/>
