Added configuration options to better control PAM behaviour (min and max UDI allowed to login), to allow NSS library to correctly construct LDAP queries for user and group membership and to be more flexible in how NSS library behaves in regards to network communication aspects (timeouts, timelimits etc.).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29303 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -47,7 +47,8 @@ PASS_HASH_ALGO="md5"
 # PAM_LOGIN_ATTR variable specifies the attribute to use when constructing the attribute value
 # assertion for retrieving a directory entry for a user's login name.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "uid" (for compatibility with RFC 2307).
+# Default: "uid" (for compatibility with RFC 2307). Should only be changed if other work-arounds
+# have been adopted to make nss_ldap use something different
 PAM_LOGIN_ATTR="uid"
 
 # PAM_FILTER variable specifies a filter to use when retrieving user information from LDAP.
@@ -69,11 +70,57 @@ PAM_MEMBER_ATTR="memberuid"
 # Default: "ssgusers"
 PAM_GROUPDN="ssgusers"
 
+# PAM_MIN_UID variable specifies the minimum numeric value of the UID allowed to login.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "0"
+PAM_MIN_UID="0"
+
+# PAM_MAX_UID variable specifies the maximum numeric value of the UID allowed to login.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "0"
+PAM_MAX_UID="0"
+
+# NSS_TIMELIMIT variable specifies the time limit (in seconds) to use when performing searches.
+# A value of zero (0) can be used to wait indefinitely for searches to be completed - not recommended.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "10"
+NSS_TIMELIMIT="10"
+
+# NSS_BIND_TIMELIMIT variable specifies the time limit (in seconds) to use when connecting to
+# the directory server.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "30"
+NSS_BIND_TIMELIMIT="30"
+
+# NSS_IDLE_TIMELIMIT variable specifies the time (in seconds) after which nss_ldap will close
+# connections to the directory server.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "600"
+NSS_IDLE_TIMELIMIT="600"
+
+# NSS_BASE_PASSWD variable will specify the base dn for the attribute that holds the password.
+# The base DN will be added as suffix to the value of this variable.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ou=posixAccounts"
+NSS_BASE_PASSWD="ou=posixAccounts"
+
+# NSS_BASE_GROUP variable will specify the base dn for the attribute that holds the group entries.
+# The base DN will be added as suffix to the value of this variable.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ou=posixGroups"
+NSS_BASE_GROUP="ou=posixGroups"
+
+# NSS_BASE_SHADOW variable will specify the base dn for the attribute that holds the shadow entries.
+# The base DN will be added as suffix to the value of this variable.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ou=posixAccounts"
+NSS_BASE_SHADOW="ou=posixAccounts"
+
 # LDAP_TYPE variable is either "ldap" or "ldaps" to identify if natively supported TLS will be used
 # to communicate with the LDAP server or not. If "ldaps" is used, relevant variables below become mandatory.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
 # Default: ldap
-LDAP_TYPE="ldaps"
+LDAP_TYPE="ldap"
 
 # LDAP_SRV variable referes to the LDAP server to be used.
 # It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
@@ -91,7 +138,14 @@ LDAP_BASE="dc=l7tech,dc=com"
 # to contact the LDAP server.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
 # Default: 389
-LDAP_PORT="636"
+LDAP_PORT="389"
+
+# LDAP_BIND_POLICY variable controls the reconnect policy: "hard" will retry connecting to
+# with exponential backoff, "soft" will fail immediately. To avoid long delays/hangs in case the
+# LDAP server is not responding, soft should be used.
+# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
+# Default: soft
+LDAP_BIND_POLICY="soft"
 
 # LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
