add dependency on task-init to init-core to fix OFFICIAL-build target which is missing the svn (and others) taskdef
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29304 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -170,7 +170,7 @@
     -->
     <target name="init" depends="task-init,init-full"/>
     <target name="init-full" depends="package.readversion,init-core"/>
-    <target name="init-core">
+    <target name="init-core" depends="task-init">
         <echo level="info">
         java.specification.name=${java.specification.name}
         java.specification.vendor=${java.specification.vendor}
