SSM-1994: prepend "Copy of", auto select name fields, change buttons to "Clone"
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29309 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpConfigurationManagerDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpConfigurationManagerDialog.properties
@@ -10,7 +10,7 @@ label.default-proxy=Default HTTP Proxy:
 no-default-proxy=None
 button.edit-default-proxy=Cha&nge
 button.add=&Add
-button.copy=C&opy
+button.copy=C&lone
 button.edit=&Edit
 button.remove=&Remove
 button.help=&Help
