--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionManagerWindow.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionManagerWindow.properties
@@ -19,4 +19,4 @@ confirmation.remove.connection=Are you sure you want to remove the JDBC connecti
 
 errors.saveFailed.title=Save Failed
 errors.saveFailed.message=Failed to save JDBC connection:
-button.copy=Copy
+button.copy=Clone
