Upgrading SSL-J from 5.1.1 to 5.1.1.2, Crypto-J from 4.1.0.1 to 5.0, and Crypto-J FIPS from 4.1 to 5.0.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29314 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/common/ivy.xml
+++ b/modules/gateway/common/ivy.xml
@@ -31,6 +31,6 @@
         <dependency org="org.springframework" name="spring-web" rev="3.0.5.RELEASE" force="true" conf="optional"/>
 
         <!-- RSA needed for running tests (since alternatives jarfiles are not deployed) -->
-        <dependency org="com.rsa" name="jsafe-jce" rev="4.1.0.1" force="true" conf="test"/>
+        <dependency org="com.rsa" name="cryptoj" rev="5.0" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
