--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -44,9 +44,9 @@ uddiTemplatesPath.description = UDDI templates path
 uddiTemplatesPath.systemProperty = ${propertyPrefix}.uddiTemplatesPath
 
 # FIPS and non-FIPS software provider paths
-ssg.crypto.fipsLib.default = ${ssg.libalt}${fs}jsafe-jce-fips-4.1.jar
+ssg.crypto.fipsLib.default = ${ssg.libalt}${fs}cryptojFIPS-5.0.jar
 ssg.crypto.fipsLib.systemProperty = com.l7tech.security.prov.rsa.libpath.fips
-ssg.crypto.nonFipsLib.default = ${ssg.libalt}${fs}jsafe-jce-4.1.0.1.jar
+ssg.crypto.nonFipsLib.default = ${ssg.libalt}${fs}cryptoj-5.0.jar
 ssg.crypto.nonFipsLib.systemProperty = com.l7tech.security.prov.rsa.libpath.nonfips
 
 # directory for ssg log files
