--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -94,10 +94,10 @@
         <dependency org="fiorano" name="fiorano-framework" rev="1.0-4507" force="true" conf="optional"/>
 
         <!-- Alternative dependencies -->
-        <dependency org="com.rsa" name="jsafe-jce" rev="4.1.0.1" force="true" conf="alternative"/>
-        <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.1" force="true" conf="alternative"/>
+        <dependency org="com.rsa" name="cryptoj" rev="5.0" force="true" conf="alternative"/>
+        <dependency org="com.rsa" name="cryptojFIPS" rev="5.0" force="true" conf="alternative"/>
         <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="test,alternative"/>
-        <dependency org="com.rsa" name="sslj" rev="5.1.1" force="true" conf="test,alternative"/>
+        <dependency org="com.rsa" name="sslj" rev="5.1.1.2" force="true" conf="test,alternative"/>
 
         <!-- Test dependencies -->
         <dependency org="org.apache.cxf" name="cxf-rt-transports-local" rev="2.3.3" force="true" conf="test"/>
