Minor modifications on variables' name for consistency.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29339 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -98,6 +98,13 @@ NSS_BIND_TIMELIMIT="30"
 # Default: "600"
 NSS_IDLE_TIMELIMIT="600"
 
+# NSS_BIND_POLICY variable controls the reconnect policy: "hard" will retry connecting to
+# with exponential backoff, "soft" will fail immediately. To avoid long delays/hangs in case the
+# LDAP server is not responding, soft should be used.
+# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
+# Default: soft
+NSS_BIND_POLICY="soft"
+
 # NSS_BASE_PASSWD variable will specify the base dn for the attribute that holds the password.
 # The base DN will be added as suffix to the value of this variable.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
@@ -139,13 +146,6 @@ LDAP_BASE="dc=l7tech,dc=com"
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
 # Default: 389
 LDAP_PORT="389"
-
-# LDAP_BIND_POLICY variable controls the reconnect policy: "hard" will retry connecting to
-# with exponential backoff, "soft" will fail immediately. To avoid long delays/hangs in case the
-# LDAP server is not responding, soft should be used.
-# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
-# Default: soft
-LDAP_BIND_POLICY="soft"
 
 # LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
